--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script defer src="index.js"></script>
 </head>
 <body>
-    <-- thi is a login form -->
+    <!-- thi is a login form -->
     <form id="form">
    <div class="container"> 
     
